--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,23 @@
-name: Node.js CI
-
+name: CI
+​
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+    push:
+        branches: [ master ]
+    
 jobs:
-  build:
-
-    runs-on: self-hosted
-
+    deploy:
+        runs-on: self-hosted
+    
+    strategy: 
+        matrix:
+            node-version: [12.x]
+            
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 16.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16.x
-    - run: npm install
-    - run: npm test
-    - run: pm2 restart app-name
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+            node-version: ${{ matrix.node-version }}
+      - run: npm install
+      - run: npm run build --if-present
+      - run: npm test
